fixed and optimize

--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
             </form>
         </div>
     </div>
-    <script src="./js.js"></script>
+    <script src="./newScript.js"></script>
+    <!-- <script src="./js.js"></script> -->
 </body>
 
 </html>
