fixed and optimized

--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
             </form>
         </div>
     </div>
-    <script src="./newScript.js"></script>
-    <!-- <script src="./js.js"></script> -->
+    <script src="./script.js"></script>
 </body>
-
 </html>
